<resources>
    <string name="app_name">The Punjabi Dhaba</string>
    <string name="name">Item Name:</string>
    <string name="price">Price: ₹ </string>
    <string name="check">Check Details</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description:</string>
    <string name="toCart">Add to Cart</string>
    <string name="heading">The Punjabi Dhaba</string>
    <string name="total">Total Price: </string>
    <string name="clear">Clear Cart</string>
    <string name="po">Place Order</string>
    <string name="goToCart">Cart</string>
    <string name="title_activity_side_navigation">SideNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
