<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20sp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/prname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
        <TextView
            android:id="@+id/prquant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/prprice"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/prtotal"
            android:layout_width="0px"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            />
    </LinearLayout>



</LinearLayout>