<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".dishDetail">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:scaleType="centerCrop"
        android:id="@+id/dishImg1"
        android:layout_weight="5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:id="@+id/dishName1"
        android:layout_weight="1"
        android:paddingTop="5sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text="@string/quantity"
        android:paddingTop="8px"
        android:layout_weight="0.5"
        android:id="@+id/dishQuantity1"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/dishDescription1"
        android:text="@string/description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:paddingTop="25px"
        android:paddingRight="20px"
        android:text="@string/price"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/dishPrice1"
        android:gravity="right"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:gravity="right"
        android:layout_weight="1">
        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/quantbt"
            android:elevation="6dp"
            app:initialNumber="1"
            app:textSize="16dp"
            tools:ignore="InvalidId" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/toCart1"
            android:background="#FF0000"
            android:textColor="@android:color/white"
            android:text="@string/toCart"/>
    </LinearLayout>
</LinearLayout>