<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="8"/>


    <TextView
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.75"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0px"
        android:layout_weight="1">
        <Button
            android:id="@+id/clear"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/rnd_button"
            android:padding="10dp"
            android:text="@string/clear" />
        <Button
            android:id="@+id/po"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/rnd_button"
            android:padding="10dp"
            android:text="@string/po"/>
    </LinearLayout>

</LinearLayout>